added changes to event page for dynamic name

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Organizations.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Organizations.cshtml
@@ -13,12 +13,12 @@
     <div class="form-group">
         <br />
        
-        <label for="Organziation" id="Organziation" style="color:white">Organziation Name:</label>
+        <label for="Organziation" id="Organziation" style="color:white">Enter Organziation Name:</label>
         <input type="text" id="orgName" name="orgName" style="color:black">
         <br />
         <br />
 
-        <label for="Organziation" id="Organziation" style="color:white">Organziation Location:</label>
+        <label for="Organziation" id="Organziation" style="color:white">Enter Organziation Location:</label>
         <input type="text" id="orgName" name="orgLocation" style="color:black">
       
     </div>
