--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/wwwroot/css/site.css
@@ -216,9 +216,13 @@ h3 {
 
 .vert-nav, .navbar-nav {
     background-color: #22303c;
-    width: 100px;
+    width: 100%;
     display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
+
+
 
 .navbar-text, .nav-link, .nav-item {
     color: white;
@@ -234,14 +238,37 @@ h3 {
     display: flex;
 }
 
+.navMenu ul li .organizations-link {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px;  Adjust the maximum width as needed 
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    z-index: 1;
+    width: 500px;  Adjust the width as needed 
+    display: flex;
+    justify-content: flex-end;
+
+}
+/*.navMenu {
+    width: 100%;
+    overflow-x: auto;
+}*/
 .wrapper {
     display: flex;
-    position: relative;
+    position: fixed;
+    width: 200px; /* Adjust the width as needed */
+    height: 100%;
+    background: #22303c;
+    padding: 25px 0;
+    
 }
 
 .wrapper, .navMenu, h5 {
     position: fixed;
-    width: 135px;
+    width: 180px;
     height: 100%;
     background: #22303c;
     padding: 25px 0;
