Search page works as intented and got rid of unnecessary code. Changed seed script as well

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
@@ -22,7 +22,7 @@
         </div>
         <br>
         <div class="mb-3">
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button id="EventByLocation" type="submit" class="btn btn-primary">Submit</button>
         </div>
     </form>
     </div>
@@ -42,12 +42,12 @@
             <div class="form-group">
                 <br />
                 <label for="name">Enter the name of the event:</label>
-                <input type="text" id="name" name="name" value="" required>
+                <input id="EventNameInput" type="text" id="name" name="name" value="" required>
                 <br />
             </div>
             <br>
             <div class="mb-3">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button id="EventByName" type="submit" class="btn btn-primary">Submit</button>
             </div>
         </form>
     </div>
