Updated editing capabilities to set up for testing

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 <body>
     <div class="wrapper">
         <div id="navMenu" class="navMenu">
-            <ul>
+            <ul id="navBarText">
                 <li>
                     <a class="nav-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/Images/logo.png" alt="LOGO" style="width: 100px; height: 70px;" /></a>
                 </li>
