--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
@@ -16,12 +16,12 @@
         <h1 style="color:white;">Hello!</h1>
      }
 
-    <h4 style="color: white;">Edit your account information below as needed</h4>
+    <h4 class="editInfoExplanation" id="editInfoExplanation"style="color: white;">Edit your account information below as needed</h4>
    
     <div>@ViewBag.error</div>
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="EditInfo" method="post">
+            <form asp-action="EditInfo" class="editInfoForm" id="editInfoForm" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 
                @* <br />
@@ -38,20 +38,20 @@
                 </div>*@
                 <br />
                 <div class="form-group">
-                    <label asp-for="Email" class="control-label" style="color:white;">Email</label>
-                    <input asp-for="Email" class="form-control" />
+                    <label asp-for="Email" id="emailLabel" class="control-label" style="color:white;">Email</label>
+                    <input asp-for="Email" id="emailInput" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
                 <br />
                 <div class="form-group">
-                    <label asp-for="PhoneNumber" class="control-label" style="color:white;">Phone Number</label>
-                    <input asp-for="PhoneNumber" class="form-control" />
+                    <label asp-for="PhoneNumber" id="numberLabel" class="control-label" style="color:white;">Phone Number</label>
+                    <input asp-for="PhoneNumber" id="numberInput" class="form-control" />
                     <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                 </div>
                 <br />
                 <br />
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" style="background-color: #78A1BB; border-color: #78A1BB" />
+                    <input type="submit" value="Save" id="editInfoButton" class="editInfoButton" style="background-color: #78A1BB; border-color: #78A1BB" />
                 </div>
                 
             </form>
