Adapting views as needed and merging with dev

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Browsing.cshtml
@@ -12,7 +12,7 @@
 
         @if(Model.Events.Count() == 0)
         {
-            <p>There aren't any events in your area</p>
+            <div class="noEventsBrowse" style="color: white;">There aren't any events in your area</div>
         }else
         {
             <table class="table table-sm" id="logTable">
