--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
 
                     <li class="nav-item">
                         @*CHANGE LINK to profile page link*@
-                        <a class="nav-link" asp-area="" asp-controller="Users" asp-action="EditInfo">Profile</a>
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="UserPage">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Users" asp-action="EditInfo">Edit Profile</a>
