--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Users/EditInfo.cshtml
@@ -51,7 +51,7 @@
                 <br />
                 <br />
                 <div class="form-group">
-                    <input type="submit" value="Save" id="editInfoButton" class="editInfoButton" style="background-color: #78A1BB; border-color: #78A1BB" />
+                    <input type="submit" value="Save" class="editButton" id="editButton" style="background-color: #78A1BB; border-color: #78A1BB" />
                 </div>
                 
             </form>
