--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/UserPage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/UserPage.cshtml
@@ -9,6 +9,8 @@
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
+<br />
+<br />
 <div>
     <h1 id="EventName">Hello @UserManager.GetUserName(User)!</h1>
 </div>
@@ -19,7 +21,7 @@
 <div class="list-group">
     @if (Model.EventList is null)
     {
-        <p>There are no Events saved for you yet. Take a look at local events in your area and add some to see them here!</p>
+        <div class="noEventsProfile" style="color:white;">There are no Events saved for you yet. Take a look at local events in your area and add some to see them here!</div>
     }
     else
     {
