--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/OrganizationDetails.cshtml
@@ -42,15 +42,13 @@
                         <h6 style="color: white;">
                             @Model.OrganizationLocation
                         </h6>
-                   
+
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
                             <li class="nav-item">
-                                @*<a style="color: white;" class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">About</a>*@
-                                <a class="search-button btn btn-primary dark-background" asp-area="" asp-controller="Organization" asp-action="OrganizationDetails" role="tab" aria-controls="profile" aria-selected="true">About</a>
+                                <a class="search-button btn btn-sm btn-primary dark-background" asp-area="" asp-controller="Organization" asp-action="OrganizationDetails" role="tab" aria-controls="profile" aria-selected="true">About</a>
                             </li>
-                            <li class="nav-item">
-                              @*  <a style="color: white;" class="text-white" asp-area="" asp-controller="Organization" asp-action="Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>*@
-                                <a class="search-button btn btn-primary dark-background" asp-area="" asp-controller="Organization" asp-action="Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>
+                            <li class="nav-item" style="margin-left: 6px;">
+                                <a class="search-button btn btn-sm btn-primary dark-background" asp-area="" asp-controller="Organization" asp-action="Events" role="tab" aria-controls="profile" aria-selected="false">Events</a>
                             </li>
                         </ul>
                     </div>
@@ -59,7 +57,7 @@
                   
              @*       <text style="" class="search-button btn btn-primary dark-background">@Html.ActionLink("Edit Profile", "EditOrganization", "Organization", new { ids = User.Identity.Name }, new { @title = "View Profile" }) </text>
                     <a class="search-button btn btn-primary dark-background" asp-area="" asp-controller="Organization" asp-action="EditOrganization" role="tab" aria-controls="profile" aria-selected="false">Edit Profile</a>*@
-                    <a class="search-button btn btn-primary dark-background" href="@Url.Action("EditOrganization", "Organization", new { ids = User.Identity.Name })" title="View Profile">Edit Profile</a>
+                    <a class="search-button btn btn-sm btn-primary dark-background" href="@Url.Action("EditOrganization", "Organization", new { ids = User.Identity.Name })" title="View Profile">Edit Profile</a>
               
                 </div>
             </div>
