Used testing to make sure it behaves as expected

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/BrowsingSearch.cshtml
@@ -42,7 +42,7 @@
             <div class="form-group">
                 <br />
                 <label for="name">Enter the name of the event:</label>
-                <input id="EventNameInput" type="text" id="name" name="name" value="" required>
+                <input id="EventNameInput" type="text" name="name" required>
                 <br />
             </div>
             <br>
