added merge from dev

--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
 <body style="background-color: #15202b">
     <div class="wrapper">
         <div id="navMenu" class="navMenu">
-            <ul id="navBarText">
+            <ul>
                 <li>
                     <a class="nav-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="/Images/logo.png" alt="LOGO" style="width: 100px; height: 70px;" /></a>
                 </li>
@@ -42,16 +42,8 @@
                 </li>
                 @if (SignInManager.IsSignedIn(User))
                 {
-
+                 
                     <li class="nav-item">
-                        @*CHANGE LINK to profile page link*@
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="UserPage">Profile</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Users" asp-action="EditInfo">Edit Profile</a>
-                    </li>
-                    @*This is for organization, not average user
-                        <li class="nav-item">
                         @{
                             IList<ApplicationUser> usersInRole = await UserManager.GetUsersInRoleAsync("User");
                             string userID = UserManager.GetUserId(User);
@@ -71,10 +63,10 @@
                             if (!isUserFound)
                             {
                                 var name = User.Identity.Name;
-                                <a href="@Url.Action("OrganizationDetails", "Organization", new { id = name })" class="nav-link btn btn-link border-0" title="View Profile">Profile</a>
+                                @Html.ActionLink("Profile", "OrganizationDetails", "Organization", new { id = name }, new { @title = "View Profile", @class="nav-link btn btn-link border-0" })
                             }
                         }
-                    </li>*@
+                    </li>
                     <li class="nav-item">
                         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                             <button id="logout" type="submit" class="nav-link btn btn-link border-0">Logout</button>
@@ -90,6 +82,7 @@
                         <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
                     </li>
                 }
+
                 <li>
                     <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </li>
