--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/Events.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Organization/Events.cshtml
@@ -7,7 +7,7 @@
 
 <link href="~/css/events.css" rel="stylesheet" />
 <link href="~/css/profile.css" rel="stylesheet" />
-<h1>Organizations Profile Page</h1>
+<h1>Organization Events</h1>
 
 <div class="container">
     <div class="event-actions">
