--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Organizations.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/Organizations.cshtml
@@ -4,8 +4,8 @@
 }
 <link href="~/css/events.css" rel="stylesheet" />
 
-<h1>Explore Organizations</h1>
-<p>Find and Engage with Registered Organizations on Our Site</p>
+<h1>Organizations</h1>
+<p>The list of Organizations registered in our site</p>
 
 
 
@@ -13,12 +13,12 @@
     <div class="form-group">
         <br />
        
-        <label for="Organziation" id="Organziation" style="color:white">Enter Organziation Name:</label>
+        <label for="Organziation" id="Organziation" style="color:white">Organziation Name:</label>
         <input type="text" id="orgName" name="orgName" style="color:black">
         <br />
         <br />
 
-        <label for="Organziation" id="Organziation" style="color:white">Enter Organziation Location:</label>
+        <label for="Organziation" id="Organziation" style="color:white">Organziation Location:</label>
         <input type="text" id="orgName" name="orgLocation" style="color:black">
       
     </div>
