--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Shared/_Layout.cshtml
@@ -68,6 +68,9 @@
                         }
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Users" asp-action="EditInfo">Edit Profile</a>
+                    </li>
+                    <li class="nav-item">
                         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                             <button id="logout" type="submit" class="nav-link btn btn-link border-0">Logout</button>
                         </form>
