--- a/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/UserPage.cshtml
+++ b/MapAppProject/OtterProductions_CapstoneProject/OtterProductions_CapstoneProject/Views/Home/UserPage.cshtml
@@ -5,6 +5,7 @@
     ViewData["Title"] = "User Profile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link href="~/css/profile.css" rel="stylesheet" />
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
